# Deltx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/runs/: index.jsonl
data/runs/2026-07-17T13-16-24Z_gemini/: manifest.json  report.txt
data/runs/2026-07-19T08-53-52Z_no-codenet/: manifest.json  report.txt
data/runs/2026-07-19T09-40-53Z_no-codenet-gpt4omini/: manifest.json  report.txt
data/runs/2026-07-19T10-04-00Z_no-codenet-codestral/: manifest.json  report.txt
data/runs/2026-07-19T15-43-36Z_droid-only-qwen-qwen2-5-coder-32b-instruct/: manifest.json  report.txt
data/runs/2026-07-19T15-49-21Z_droid-only-microsoft-phi-3-medium-4k-instruct/: manifest.json  report.txt  uncommitted.diff
data/runs/2026-07-19T15-55-58Z_droid-only-ibm-granite-granite-8b-code-base-4k/: manifest.json  report.txt
data/runs/2026-07-19T16-01-30Z_droid-only-01-ai-yi-coder-9b-chat/: manifest.json  report.txt
data/runs/2026-07-19T17-13-12Z_transfer-droid-to-aig/: manifest.json  report.txt  uncommitted.diff
data/runs/2026-07-19T17-14-06Z_transfer-aig-to-droid/: manifest.json  report.txt  uncommitted.diff
data/runs/2026-07-21T18-32-13Z_droid50k-gpt4omini/: manifest.json  report.txt
data/runs/2026-07-21T19-15-59Z_droid50k-gpt4o/: manifest.json  report.txt
data/runs/2026-07-21T19-39-58Z_droid50k-qwen-qwen2-5-coder-7b-instruct/: manifest.json  report.txt
data/runs/2026-07-21T19-56-15Z_meta-llama-llama-3-3-70b-instruct/: manifest.json  report.txt
data/runs/ablation_families/droid50k/: ablation_raw.csv  ablation_report.md  ablation_summary.csv  config.json  threshold_sweep_raw.csv  threshold_sweep_summary.csv
data/runs/ablation_families/s1/: ablation_raw.csv  ablation_report.md  ablation_summary.csv  config.json  threshold_sweep_raw.csv  threshold_sweep_summary.csv
docs/detection/: README.md  ablation.md  dataset_construction.md  training.md
notebooks/: extract_features_gpu.ipynb
scripts/: run_family_ablation.py  sample.py  train_detector.py
src/deltx/: __init__.py
src/deltx/common/: __init__.py  config.py  exceptions.py  provenance.py
src/deltx/detection/: __init__.py  classifier.py  cli.py  inference.py  models.py
src/deltx/detection/features/: __init__.py  distribution.py  perplexity.py  stylometric.py
src/deltx/extraction/: __init__.py
src/deltx/interpretation/: __init__.py
src/deltx/prediction/: __init__.py
src/deltx/scoring/: __init__.py
tests/: conftest.py  test_common.py  test_provenance.py
tests/detection/: conftest.py  test_cli.py  test_distribution.py  test_inference.py  test_integration.py  test_models.py  test_parser.py  test_perplexity.py  test_stylometric.py
